--- a/app/src/main/res/layout/activity_wine_pager.xml
+++ b/app/src/main/res/layout/activity_wine_pager.xml
@@ -1,6 +1,6 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/activity_wine_item_pager_view_pager"
               android:layout_height="match_parent"
-              android:layout_width="match_parent"
-              android:orientation="vertical">
+              android:layout_width="match_parent">
 
 </android.support.v4.view.ViewPager>
