--- a/app/src/main/res/layout/list_item_wine_item.xml
+++ b/app/src/main/res/layout/list_item_wine_item.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/list_item_wine_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/list_item_wine_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:padding="4dp"/>
+
+    <TextView
+        android:id="@+id/list_item_wine_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:layout_below="@+id/list_item_wine_description"/>
 
     <TextView
         android:id="@+id/list_item_wine_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:padding="4dp"/>
 
 </RelativeLayout>
