--- a/app/src/main/res/layout/list_item_wine_item.xml
+++ b/app/src/main/res/layout/list_item_wine_item.xml
@@ -7,19 +7,22 @@
         android:id="@+id/list_item_wine_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp"/>
+        android:padding="4dp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/list_item_wine_id"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:layout_below="@+id/list_item_wine_description"/>
 
     <TextView
         android:id="@+id/list_item_wine_price"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/list_item_wine_description"
         android:padding="4dp"/>
 
 </RelativeLayout>
