--- a/app/src/main/res/layout/fragment_wine_item.xml
+++ b/app/src/main/res/layout/fragment_wine_item.xml
@@ -1,77 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/wine_item_description_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/wine_description_label"/>
+        android:layout_centerHorizontal="true"
+        android:text="@string/wine_description_label"
+        android:textStyle="bold"
+        android:textSize="24sp"/>
+
     <EditText
         android:id="@+id/wine_item_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_below="@+id/wine_item_description_label"
+        android:textStyle="bold"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_gravity="left">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/wine_id_label"/>
+    <TextView
+        android:id="@+id/wine_item_id_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wine_item_description"
+        android:padding="10dp"
+        android:text="@string/wine_id_label"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/wine_pack_size_label"/>
+    <EditText
+        android:id="@+id/wine_item_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/wine_item_description"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/wine_case_price_label"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/wine_active_label"/>
-        </LinearLayout>
+    <TextView
+        android:id="@+id/wine_item_pack_size_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wine_item_id_label"
+        android:padding="10dp"
+        android:text="@string/wine_pack_size_label"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_gravity="right">
+    <EditText
+        android:id="@+id/wine_item_pack_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/wine_item_id_label"/>
 
-            <EditText
-                android:id="@+id/wine_item_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
-            <EditText
-                android:id="@+id/wine_item_pack_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/wine_item_case_price_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wine_item_pack_size_label"
+        android:padding="10dp"
+        android:text="@string/wine_case_price_label"/>
 
-            <EditText
-                android:id="@+id/wine_item_case_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+    <EditText
+        android:id="@+id/wine_item_case_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/wine_item_pack_size_label"/>
 
-            <CheckBox
-                android:id="@+id/wine_item_active"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/wine_item_active_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wine_item_case_price_label"
+        android:padding="10dp"
+        android:text="@string/wine_active_label"/>
+
+    <CheckBox
+        android:id="@+id/wine_item_active"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/wine_item_case_price_label"/>
+
+</RelativeLayout>
