--- a/app/src/main/res/layout/list_item_wine_item.xml
+++ b/app/src/main/res/layout/list_item_wine_item.xml
@@ -25,4 +25,9 @@
         android:layout_below="@+id/list_item_wine_description"
         android:padding="4dp"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/background_dark"/>
+
 </RelativeLayout>
